# OCR-plate

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: app_config.h  brand_classifier.h  ctc_decode.h  image_preprocess.h  onnx_runner.h  post_process_out_string.h  yolo26_nmsfree.h
include/utils/: cli_args.h  ocr_report.h
model/: brand_car_classification.onnx  brand_car_classification.onnx.data  plate_detection.onnx
src/: brand_classifier.cpp  ctc_decode.cpp  image_preprocess.cpp  main.cpp  ocr_batch.cpp  onnx_runner.cpp  post_process_out_string.cpp  yolo26_nmsfree.cpp
src/utils/: cli_args.cpp  ocr_report.cpp  onnx_decode_utils.cpp
